--- a/experiments/cfgs/res101.yml
+++ b/experiments/cfgs/res101.yml
@@ -6,12 +6,10 @@ TRAIN:
   RPN_POSITIVE_OVERLAP: 0.8
   RPN_BATCHSIZE: 256
   PROPOSAL_METHOD: gt
-  BG_THRESH_LO: 0.0
-  DISPLAY: 20
+  DISPLAY: 10000
   BATCH_SIZE: 32
   DOUBLE_BIAS: False
-  SNAPSHOT_LOAD_PREFIX: gpir_no
-  SNAPSHOT_PREFIX: gpir_imagenet_vg
+  SNAPSHOT_LOAD_PREFIX: dsg_no 
   RPN_POST_NMS_TOP_N: 32
   LEARNING_RATE: 0.001
   MOMENTUM: 0.9
